--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -29,7 +29,7 @@
 
 	[class*="col-"] {height: auto;}
 
-	h1, h2, h3, h4, li {
+	h1, h2, h3, h4, li, label {
 		color: #ffffff;
 		font-family: Arial Narrow, sans-serif;
 		text-transform: uppercase;
