--- a/diario_de_classe/css/anotacoes.css
+++ b/diario_de_classe/css/anotacoes.css
@@ -4,7 +4,7 @@
 	border-bottom: 2px solid #a8aba8;
 }
 
-form, button {
+form {
 		color: black;
 		font-family: Arial Narrow, sans-serif;
 		text-transform: uppercase;
@@ -29,12 +29,6 @@ textarea:focus {
 	background: #5f5f5f;
 	font-size: 1em;
 	border:none;
-}
-
-button {
-	width: 70px;
-	border-radius: 5px;
-	border: 2px solid #5f5f5f;	
 }
 
 h3 {
