--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -29,10 +29,13 @@
 
 	[class*="col-"] {height: auto;}
 
-	h1, h2, h3, h4, li, label {
+	h1, h2, h3, h4, li, label, button {
 		color: #ffffff;
 		font-family: Arial Narrow, sans-serif;
 		text-transform: uppercase;
+	}
+	h3 {
+		text-decoration: underline;
 	}
 	p {
 		font-family: Arial Narrow, sans-serif;
@@ -44,6 +47,25 @@
 	a {
 		text-decoration: none;
 	}
+/**xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx**/
+/**xxxDEFINIÇÕES DE BOTÃOxxxx**/
+/**xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx**/
+
+button {
+	width: 70px;
+	border-radius: 5px;
+	border: 2px solid #5f5f5f;
+	color: #5f5f5f;
+	font-family: Arial Narrow, sans-serif;
+	text-transform: uppercase;
+	font-weight: bold;	
+}
+button:hover {
+	background: #4f4f4f;
+	color: #4caf50;
+}
+
+
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/	
 /*definições container-geral*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
@@ -116,14 +138,13 @@
 }
 .menu ul li a:hover {
 	color: #4caf50;
-	text-shadow: ;
 }
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*Definições do conteúdo*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 
 .container-conteudo {
-	height: 500px;
+	height: auto;
 }
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*definições de rodapé*/
