--- a/diario_de_classe/css/planoDeAula.css
+++ b/diario_de_classe/css/planoDeAula.css
@@ -1,10 +1,25 @@
+.botoes-plano-de-aula {
 
+}
+.botoes-plano-de-aula .fas {
+	font-size: 30px;
+	color:#5f5f5f;
+	margin:10px 0 0 10px;
+}
+.botoes-plano-de-aula h3 {
+	color: #5f5f5f;
+	display: inline-block;
+}
 .planoDeAula {
 	margin-top: 10px;
+/*	display: none;*/
 }
 .cabecalhoPlanosDeAula header h3{
 	color: #5f5f5f;
 	margin: 10px;
+}
+.cabecalhoPlanosDeAula {
+	border-top: 2px solid #a8aba8;
 }
 label {
 	display: block;
@@ -18,14 +33,21 @@ input {
 	border-radius: 10px;
 	border:2px solid #5f5f5f;
 }
+input:focus {
+	color: #ffffff;
+	background: #5f5f5f;
+	font-size: 1em;
+	border:none;
+}
+button {
+	margin: 10px;
+}
 ::-webkit-input-placeholder {
 	font-size: 12px;
 	font-style: italic;
 }
 
 @media only screen and (max-width: 768px){
-	[class*="col-"] {
-		width: 100%;
-		border-radius:0 0 0 0;
+	
 	}
 }
