--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -190,7 +190,7 @@ button:hover {
 		
 	.menu-para-celular {display: block;}
 
-	.menu {display: none;}
+	/*.menu {display: none;}*/
 
 	.aparecer {display: block !important;}
 
