--- a/diario_de_classe/css/anotacoes.css
+++ b/diario_de_classe/css/anotacoes.css
@@ -2,6 +2,7 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 	border-bottom: 2px solid #a8aba8;
+	display: none;
 }
 
 form {
@@ -33,14 +34,18 @@ textarea:focus {
 
 h3 {
 	color: #5f5f5f;
-	margin-bottom: 20px;
-	margin-left: 10px;
-
+	display: inline-block;
 }
 
-.anotacoesSalvas {
-	padding-top: 20px;
-	padding-bottom: 20px;
+.botoes-anotacoes {
+	border-bottom: 2px solid #a8aba8;
+}
+.botoes-anotacoes h3 {
+	cursor: pointer;
+}
+
+.anotacoesSalvas h3{
+	margin: 10px;
 }
 .anotacao {
 	height: 50px;
