--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -34,9 +34,7 @@
 		font-family: Arial Narrow, sans-serif;
 		text-transform: uppercase;
 	}
-	h3 {
-		text-decoration: underline;
-	}
+
 	p {
 		font-family: Arial Narrow, sans-serif;
 	}
@@ -65,6 +63,13 @@ button:hover {
 	color: #4caf50;
 }
 
+.fas {
+	font-size: 30px;
+	color:#5f5f5f;
+	margin:10px 0 0 10px;
+}
+
+
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/	
 /*definições container-geral*/
@@ -91,14 +96,16 @@ button:hover {
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*Definições de menu*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
-
+.aparecer {
+	display: block !important;
+}
 .menu-para-celular {
 	height: 40px;
 	background: #a8aba8;
 	position: relative;
 	display: none;
 }
-.fa-ellipsis-v {
+.fa-bars {
 	margin-top: 10px;
 	font-size: 25px;
 	color: #5f5f5f;
@@ -190,7 +197,7 @@ button:hover {
 		
 	.menu-para-celular {display: block;}
 
-	/*.menu {display: none;}*/
+	.menu {display: none;}
 
 	.aparecer {display: block !important;}
 
