--- a/diario_de_classe/css/planoDeAula.css
+++ b/diario_de_classe/css/planoDeAula.css
@@ -1,6 +1,4 @@
-.botoes-plano-de-aula {
 
-}
 .botoes-plano-de-aula .fas {
 	font-size: 30px;
 	color:#5f5f5f;
@@ -9,10 +7,10 @@
 .botoes-plano-de-aula h3 {
 	color: #5f5f5f;
 	display: inline-block;
+	cursor: pointer;
 }
 .planoDeAula {
-	margin-top: 10px;
-/*	display: none;*/
+	display: none;
 }
 .cabecalhoPlanosDeAula header h3{
 	color: #5f5f5f;
@@ -29,7 +27,7 @@ label {
 }
 input {
 	width: 100%;
-	height: 30px;
+	height: 40px;
 	border-radius: 10px;
 	border:2px solid #5f5f5f;
 }
