--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -93,9 +93,36 @@ button:hover {
 	text-align: center;
 	padding-top: 10px;
 }
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*Definições para botão para expandir formulários*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+.botao {
+	border-bottom: 2px solid #a8aba8;
+}
+.botao h3 {
+	cursor: pointer;
+	color: #5f5f5f;
+	display: inline-block;
+}
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*xxxxxxxxBotão do menu Bar xxxxxxx*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+.fa-bars {
+	margin-top: 10px;
+	font-size: 25px;
+	color: #5f5f5f;
+	position: absolute;
+	right: 10px;
+}
+
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*Definições de menu*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
 .aparecer {
 	display: block !important;
 }
@@ -104,13 +131,6 @@ button:hover {
 	background: #a8aba8;
 	position: relative;
 	display: none;
-}
-.fa-bars {
-	margin-top: 10px;
-	font-size: 25px;
-	color: #5f5f5f;
-	position: absolute;
-	right: 10px;
 }
 
 .menu-para-celular h2 {
@@ -146,6 +166,7 @@ button:hover {
 .menu ul li a:hover {
 	color: #4caf50;
 }
+
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*Definições do conteúdo*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
