--- a/diario_de_classe/css/planoDeAula.css
+++ b/diario_de_classe/css/planoDeAula.css
@@ -6,13 +6,13 @@
 	margin: 10px;
 }
 
-label {
+label, option {
 	display: block;
 	color: #5f5f5f;
 	margin-left: 10px;
 	font-weight: 800;
 }
-input {
+input, select {
 	width: 100%;
 	height: 40px;
 	border-radius: 10px;
