--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -77,6 +77,7 @@ button:hover {
 .container-geral{
 	height: auto;
 	margin: 0 auto;
+	max-width: 1400px !important;
 }
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/	
 /*Definições de cabecalho*/
@@ -86,11 +87,14 @@ button:hover {
 	height: 70px;
 	background: #5f5f5f;
 	border-radius: 50px  50px 0 0;
+	position: relative;
+	text-align: center;
 }
 
 .cabecalho h1 {
-	text-align: center;
 	padding-top: 10px;
+	display: inline-block;
+	margin: 0 auto;
 }
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
@@ -106,9 +110,66 @@ button:hover {
 	display: inline-block;
 }
 
-/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
-/*xxxxxxxxBotão do menu Bar xxxxxxx*/
-/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+form {
+	color: black;
+	font-family: Arial Narrow, sans-serif;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+label {
+	font-size: 18px;
+}
+label, button {
+	color: #5f5f5f;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+
+textarea {
+	width: 100%;
+	border: 2px solid #5f5f5f;
+	border-radius: 10px;
+}
+textarea:focus {
+	color: #ffffff;
+	background: #5f5f5f;
+	font-size: 1em;
+	border:none;
+}
+/*//xxx*/
+
+label {
+	display: block;
+	color: #5f5f5f;
+	margin-left: 10px;
+	font-weight: 800;
+}
+input {
+	width: 100%;
+	height: 40px;
+	border-radius: 10px;
+	border:2px solid #5f5f5f;
+}
+input:focus {
+	color: #ffffff;
+	background: #5f5f5f;
+	font-size: 1em;
+	border:none;
+}
+button {
+	margin: 10px;
+}
+::-webkit-input-placeholder {
+	font-size: 12px;
+	font-style: italic;
+}
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*xxxxxxxxdefinições gerais de icones xxxxxxx*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+/*icone-menu*/
 
 .fa-bars {
 	margin-top: 10px;
@@ -117,6 +178,16 @@ button:hover {
 	position: absolute;
 	right: 10px;
 }
+
+/*icone logout*/
+
+.fa-sign-out-alt {
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	color:#ffffff;
+}
+
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*Definições de menu*/
@@ -186,7 +257,7 @@ button:hover {
 .rodape p {
 	color: #ffffff;
 	font-family: courier, sans-serif;
-	font-size: 12px;
+	font-size: 10px;
 }
 .rodape p a { color:#ffffff;}
 
@@ -210,7 +281,7 @@ button:hover {
 
 
 	.container-geral {
-		min-width:320px;
+		min-width:320px !important;
 	}
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/	
 /*definições de Menu*/
