--- a/diario_de_classe/css/diarioDeClasse.css
+++ b/diario_de_classe/css/diarioDeClasse.css
@@ -63,13 +63,6 @@ button:hover {
 	background: #4f4f4f;
 	color: #4caf50;
 }
-
-.fas {
-	font-size: 30px;
-	color:#5f5f5f;
-	margin:10px 0 0 10px;
-}
-
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/	
 /*definições container-geral*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
@@ -145,13 +138,19 @@ label {
 	margin-left: 10px;
 	font-weight: 800;
 }
-input {
+input, select, option {
 	width: 100%;
 	height: 40px;
 	border-radius: 10px;
 	border:2px solid #5f5f5f;
 }
 input:focus {
+	color: #ffffff;
+	background: #5f5f5f;
+	font-size: 1em;
+	border:none;
+}
+select:focus {
 	color: #ffffff;
 	background: #5f5f5f;
 	font-size: 1em;
@@ -169,23 +168,99 @@ button {
 /*xxxxxxxxdefinições gerais de icones xxxxxxx*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 
-/*icone-menu*/
 
-.fa-bars {
-	margin-top: 10px;
-	font-size: 25px;
-	color: #5f5f5f;
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*definições menu do botão  menu bar***/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+.menu-bar{
+	display: inline;
+	cursor: pointer;
+	height: 		 40px ;
+	width:   		 40px ;
 	position: absolute;
 	right: 10px;
 }
+.barra-superior, .barra-central, .barra-inferior {
+	width: 100%;
+	height: 8px;
+	background: #5f5f5f;
+	border-radius: 3px;
+	width: 40px;
+}
 
+.barra-superior{
+	margin-top: 4px;
+	margin-bottom: 4px;
+}
+.barra-central {
+	margin-bottom: 4px; 
+}
+.barra-inferior{
+	margin-top: 4px;	
+}
+
+.menu-barra-Sup {
+	transform: rotate(-45deg);
+	animation-name: menu-barra-superior;
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+}
+.menu-barra-Inf {
+	transform: rotate(45deg);
+	animation-name: menu-barra-inferior;
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes menu-barra-superior{
+	from    {position: absolute;
+			 top: 0;}
+	to   	{position: absolute;
+			 top: 15px;}
+}
+
+.desaparecer-barra-central {
+	display: none;
+}
+
+@keyframes menu-barra-inferior {
+	from {position: absolute;
+			 top: 0;}
+	to {position: absolute;
+			 top: 15px;}
+}
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*icone logout*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 
 .fa-sign-out-alt {
 	position: absolute;
 	right: 15px;
 	top: 15px;
 	color:#ffffff;
+}
+
+.fas {
+	font-size: 30px;
+	color:#5f5f5f;
+	margin:10px 0 0 10px;
+}
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/*Classe para animation giratório*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+.girar{
+	animation-name: girar-icone;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+@keyframes girar-icone {
+	0%  {transform: rotate(0deg);}
+	30% {transform: rotate(20deg);}
+	60% {transform: rotate(-20deg);}
+	100%{transform: rotate(0deg);}
 }
 
 
@@ -236,6 +311,17 @@ button {
 .menu ul li a:hover {
 	color: #4caf50;
 }
+
+	.filho1, .filho2, .filho3, .filho4, .filho5 {
+	animation-name: indicador-menu;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+	@keyframes indicador-menu {
+		from {background-color: #a8aba8; color: white;}
+		to   {background-color: #5f5f5f; color: black;}
+	}
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 /*Definições do conteúdo*/
