--- a/diario_de_classe/css/login.css
+++ b/diario_de_classe/css/login.css
@@ -2,22 +2,33 @@
 	margin: 0 auto;
 	margin-top: 50px;
 	margin-bottom: 50px;
-	text-align: right;
 }
 .container-login h1 {
 	color: #5f5f5f;
 	text-align: center;	
 }
-.container-login p a, .container-login p {
-	font-style: oblique;
-	color: #5f5f5f;
+.cadastro-recuperar {
+	position: relative;
 }
+.cadastro-recuperar p {
+	color: #5f5f5f;
+	display: inline;
+	text-align: left;
+	cursor: pointer;
+	font-size: 20px;
+}
+.cadastro-recuperar p:nth-child(2) {
+	position: absolute;
+	right: 0;
+}
+
 .botao-login {
 	width: 150px;
 	height: 30px;
 	display: block;
 	margin: 0 auto;
-	margin-top: 10px;
+	margin-top: 20px;
+	margin-bottom: 50px;
 }
 .fa-user, .fa-key {
 	text-align: center;
@@ -32,6 +43,33 @@ text-align: center;
 input {
 	margin-top: 20px;
 }
+/***************************************/
+/*Definições da aba de cadastro*/
+/***************************************/
+
+
+.cadastro, .recuperar-senha {
+	margin: 0 auto;
+	display: none;
+}
+
+.cadastro h2, .recuperar-senha h2 {
+	color:#5f5f5f;
+	margin: 10px;
+}
+
+.cadastro form label, .recuperar-senha form label {
+	display: inline;
+	text-align: center;
+	margin: 10px;
+}
+.cadastro form input, .recuperar-senha form input {
+	margin: 10px 0 20px 0;
+	display: block;
+}
+.surgir{display: block !important;}
+.sair {display: none !important;}
+
 
 /***************************************/
 /*defiknições para vialização 'MOBILE'*/
