--- a/diario_de_classe/css/anotacoes.css
+++ b/diario_de_classe/css/anotacoes.css
@@ -24,13 +24,17 @@
 	font-size: 1em;
 }
 
-.anotacao:hover {
+/*.anotacao:hover {
 	background: #a8aba8;
-}
+}*/
 .tituloNovaDiv {
 	display: inline-block;
 	margin:10px 10px 15px 10px;
 
+}
+h4 {
+	padding-top: 15px;
+	margin: 15px;
 }
 .conteudo-texto-anotacoes {
 	margin-left: 10px;
@@ -38,3 +42,48 @@
 .sumir {display: none}
 
 .aparecer {display: block !important;}
+
+
+
+
+.cont-edit-anotacao label, .cont-edit-anotacao input, .cont-edit-anotacao textarea  {
+		display: block;
+		margin-right: 10px;
+		margin-top: 20px;
+
+		}
+.cont-edit-anotacao input {
+		width: 50%;
+		
+		}		
+.cont-edit-anotacao textarea {
+		width: 100%;
+		}
+
+.cont-edit-anotacao {
+		display:none;
+		}
+.mostrar {
+		display: block !important;
+		}
+
+/*//css tabela Anotações ///*/
+
+.tabela { 
+	font-family: Arial Narrow, sans-serif;
+	text-transform: uppercase;
+}
+
+.tabela  th {
+	padding: 12px;
+    text-align: center;
+    background-color: #a8aba8;
+    color: #5f5f5f;
+}
+
+.tabela td {
+	padding: 12px;
+	text-align: center;
+	color: #ffffff;
+	border: 1px solid #a8aba8;
+}		
